fixed exceptions